--- a/source/sass/modules/media_person/_media-person.scss
+++ b/source/sass/modules/media_person/_media-person.scss
@@ -19,3 +19,15 @@
     }
   }
 }
+.media-person--author {
+  color: $brand-primary;
+  background-color: transparent;
+  padding: 0;
+
+  .media-person__image {
+    float: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+}
