updated styling for teaser view modes in reference üaragraphs

--- a/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
+++ b/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
@@ -1,7 +1,6 @@
 .media-reference {
   .paragraph__content  {
-    padding-top: 0;
-    padding-bottom: 0;
+    margin: $padding-small-horizontal*-2;
     article.address,
     .document,
     .media-tweet,
