--- a/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
+++ b/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
@@ -1,10 +1,6 @@
 .view-reference {
   .view-content {
-    margin: 0 $padding-small-horizontal*-2;
-  }
-  .views-row {
-    padding: $padding-small-horizontal*2;
-    padding-top: 0;
+    margin: $padding-small-horizontal*-2;
   }
   .view-footer {
     a {
