--- a/source/sass/components/_search.scss
+++ b/source/sass/components/_search.scss
@@ -155,11 +155,13 @@
       background-color: rgba($brand-primary, 0.2);
     }
     h3{
-      font-weight: bold; 
+      font-weight: bold;
     }
   }
 }
-.path-suche{
+.path-suche,
+.path-mediathek,
+.path-medienverwaltung {
   aside{
     background-color: $brand-primary;
     color: $color-white;
@@ -186,7 +188,7 @@
       border: 0;
       &-heading{
         display: none;
-      } 
+      }
       &-body{
         padding: 0;
         .form-item{
@@ -212,7 +214,7 @@
         }
       }
     }
-    
+
     .form-actions{
       float: right;
       .search-box__button{
