--- a/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
+++ b/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
@@ -11,3 +11,15 @@
     }
   }
 }
+
+.region-sidebar-second .media-reference {
+  .media-image,
+  .media-video,
+  .media-video-upload,
+  .media-person,
+  .media-contact {
+    .paragraph__content {
+      margin: 0 $grid-gutter-width/-2;
+    }
+  }
+}
