--- a/templates/system/header-intro.html.twig
+++ b/templates/system/header-intro.html.twig
@@ -2,25 +2,7 @@
     <div class="header__upper-menu--title">{% trans %} TECHNISCHES MENU {% endtrans %}<i class="fa fa-angle-down" aria-hidden="true"></i>
 </div>
     <div class="header__upper-menu--elements">
-        <form class="lang_dropdown_form language" id="lang_dropdown_form_language" action="/fr" method="post" accept-charset="UTF-8">
-            <label for="edit-lang-dropdown-select">Sprache: </label>
-            <select class="lang-dropdown-select-element form-select" id="edit-lang-dropdown-select" name="lang_dropdown_select" sb="23683365">
-                <option value="de" selected>de</option>
-                <option value="en-gb">en</option>
-                <option value="fr">fr</option>
-                <option value="nl">nl</option>
-                <option value="tr">tr</option>
-            </select>
-            {# TODO: Change 'DE' for the language variable #}
-            <a class="selector">DE <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-            <ul id="options" class="options is-hidden" >
-                <li><a href="#de" rel="de">de</a></li>
-                <li><a href="#en-gb" rel="en-gb">en</a></li>
-                <li><a href="#fr" rel="fr" class="sbFocus">fr</a></li>
-                <li><a href="#nl" rel="nl">nl</a></li>
-                <li><a href="#tr" rel="tr">tr</a></li>
-            </ul>
-        </form>
+        {{ language_block }}
         <div class="menu col-md-4">
             <nav id="service-menu" class="navigation" role="navigation">
                 <ul class="menu clearfix">
