--- a/source/sass/elements/_tags.scss
+++ b/source/sass/elements/_tags.scss
@@ -2,7 +2,7 @@ $tag-font-size: 12px;
 
 .tags {
   position: relative;
-  padding-left: 25px;
+  padding-left: $padding-xs-horizontal*5;
 
   &:before {
     content: '\f02c';
@@ -23,5 +23,25 @@ $tag-font-size: 12px;
     color: $color-white;
     font-weight: normal;
     text-decoration: $link-hover-decoration;
+  }
+}
+
+// For media view mode preview
+.media--preview {
+
+  .tags {
+    font-size: $font-size-small;
+    padding: 0 $padding-xs-horizontal $padding-xs-horizontal $padding-xs-horizontal*4;
+
+    &:before {
+      color: $brand-primary;
+      margin-left: $padding-xs-horizontal;
+    }
+
+    a {
+      display: inline-block;
+      color: $brand-primary;
+      padding-right: $padding-xs-horizontal;
+    }
   }
 }
