adjust sidebar display for view references - RMNRW-258

--- a/source/sass/elements/_paragraphs.scss
+++ b/source/sass/elements/_paragraphs.scss
@@ -99,11 +99,10 @@ div[class*="__header-paragraphs"] .paragraph a {
 }
 
 .region-sidebar-second {
-	.paragraph__content {
-		padding-top: 0;
-	}
-	.paragraph.text .paragraph__content {
-		padding-top: $padding-large-vertical*2;
+	.downloads {
+		.paragraph__content {
+			padding-top: 0;
+		}
 	}
 }
 
