--- a/source/sass/modules/node_press/_node-press.scss
+++ b/source/sass/modules/node_press/_node-press.scss
@@ -14,6 +14,7 @@
 // Press list - slider view
 .press-list {
   .press__latest_wrapper {
+    padding: $grid-gutter-width/2;
     a {
       text-decoration: none;
       cursor: default;
@@ -39,6 +40,12 @@
     font-weight: bold;
     &:hover {
       text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+  .view-footer {
+    margin-top: $vertical-gutter-width/2;
+    a {
       cursor: pointer;
     }
   }
