--- a/source/sass/views/_view-search-media.scss
+++ b/source/sass/views/_view-search-media.scss
@@ -3,6 +3,10 @@
   margin-top: $grid-gutter-width/2;
   margin-right: -$grid-gutter-width/2;
   margin-left: -$grid-gutter-width/2;
+
+  img {
+    width: 100%;
+  }
 }
 
 .pager {
