--- a/templates/system/footer.html.twig
+++ b/templates/system/footer.html.twig
@@ -15,8 +15,8 @@
             </div>
             <div class="footer__footer_menu col-md-6 right">
             {# demo menu #}
-                <ul class="menu "><li class="first leaf"><a href="/inhalt" title="Inhalt anzeigen">Inhalt</a></li>
-                    <li class="leaf"><a href="/impressum-0" title="Impressum anzeigen">Impressum</a></li>
+                <ul class="menu "><li class="first leaf"><a href="/sitemap" title="Inhalt anzeigen">Inhalt</a></li>
+                    <li class="leaf"><a href="/impressum" title="Impressum anzeigen">Impressum</a></li>
                     <li class="leaf"><a href="/netiquette" title="Netiquette">Netiquette</a></li>
                     <li class="last leaf"><a href="/datenschutzhinweise" title="Datenschutz anzeigen">Datenschutz</a></li>
                 </ul>        
