--- a/templates/system/header-intro.html.twig
+++ b/templates/system/header-intro.html.twig
@@ -19,10 +19,11 @@
                     {% else %}
                          <li class="first"><a href="/user/login" title="Anmelden / Registrieren" class="login">{% trans %}Anmelden / Registrieren{% endtrans %}</a></li>  
                     {% endif %}
-                   
-                    <li><a href="/servicecenter/kontakt" title="Kontakt" class="kontakt">Kontakt</a></li>
                     {% if social_media_settings %}
-                        <li class="last"><a href="#">{{ '"Social Media"-Settings'|trans }}</a></li>
+                    <li><a href="/servicecenter/kontakt" title="Kontakt" class="kontakt">Kontakt</a></li>
+                    <li class="last"><a href="#" class="js-social-media-settings-open hidden">{{ 'Social Media Settings'|trans }}</a></li>
+                    {% else %}
+                    <li class="last"><a href="/servicecenter/kontakt" title="Kontakt" class="kontakt">Kontakt</a></li>
                     {% endif %}
                 </ul>
             </nav>
