changed selectors from press-list -> press-slider

--- a/source/sass/modules/node_press/_node-press.scss
+++ b/source/sass/modules/node_press/_node-press.scss
@@ -12,7 +12,7 @@
 
 
 // Press list - slider view
-.press-list {
+.press-slider {
   .press__latest_wrapper {
     padding: $grid-gutter-width/2;
     a {
