--- a/source/sass/elements/_sliders.scss
+++ b/source/sass/elements/_sliders.scss
@@ -190,7 +190,8 @@
   }
 }
 
-.press-list {
+// press slider specific
+.press-slider {
   .slick-arrow {
     top: -51px;
     &:before {
@@ -210,6 +211,7 @@
   }
 }
 
+// tweets slider specific
 .tweets {
   .slick-arrow {
     top: -27px;
