Revert "changed selectors from press-list -> press-slider"
This reverts commit 1c1fc1ab97dc992e67299e888847a5b954af8c60.

--- a/source/sass/elements/_sliders.scss
+++ b/source/sass/elements/_sliders.scss
@@ -190,8 +190,7 @@
   }
 }
 
-// press slider specific
-.press-slider {
+.press-list {
   .slick-arrow {
     top: -51px;
     &:before {
@@ -211,7 +210,6 @@
   }
 }
 
-// tweets slider specific
 .tweets {
   .slick-arrow {
     top: -27px;
