--- a/source/sass/modules/node_normal_page/_node_normal_page.scss
+++ b/source/sass/modules/node_normal_page/_node_normal_page.scss
@@ -2,6 +2,7 @@
   .normal-page__teaser-content {
     @include make-sm-column(12);
     padding-top: $grid-gutter-width/2;
+    max-height: none;
   }
   &.preview {
     @include make-sm-column(12);
