--- a/source/sass/modules/media_video/_media-video.scss
+++ b/source/sass/modules/media_video/_media-video.scss
@@ -1,6 +1,5 @@
 .video,
 .video-upload {
-  @include make-row();
   position: relative;
   color: $color-white;
   &__type-text {
@@ -59,6 +58,7 @@
   .video__info,
   .video-upload__info {
     text-align: left;
+    font-size: $font-size-extra-small;
   }
 }
 
