fix media reference negative margin issue - RMNRW-299

--- a/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
+++ b/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
@@ -9,6 +9,9 @@
       padding-bottom: $vertical-gutter-width/2;
     }
   }
+  .audio {
+    margin: 0;
+  }
 }
 
 .region-sidebar-second .media-reference {
