--- a/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
+++ b/source/sass/modules/paragraph_view_reference/_paragraph-view-reference.scss
@@ -93,7 +93,8 @@
 
 .region-sidebar-second {
   .view-content {
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
   }
   .paragraph__content {
     padding-top: 0;
