--- a/source/sass/elements/_paragraphs.scss
+++ b/source/sass/elements/_paragraphs.scss
@@ -63,7 +63,7 @@ div[class*="__header-paragraphs"] .paragraph a {
 .content-header {
 	padding-bottom: $padding-base-vertical*3;
 	&__media {
-		margin: 0 $grid-gutter-width/-2;
+		//margin: 0 $grid-gutter-width/-2;
 	}
 
 	&__text {
