--- a/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
+++ b/source/sass/modules/paragraph_media_reference/_paragraph-media-reference.scss
@@ -1,21 +1,11 @@
 .media-reference {
   .paragraph__content  {
-    margin: $padding-small-horizontal*-2;
-    article.address,
-    .document,
-    .media-tweet,
-    .media-instagram {
-      padding-top: $vertical-gutter-width/2;
-      padding-bottom: $vertical-gutter-width/2;
-    }
-  }
-  .audio {
-    margin: 0;
+    padding: 0;
   }
 }
 
 .region-sidebar-second .media-reference {
   .paragraph__content {
-    margin: 0 $grid-gutter-width/-2;
+    //margin: 0 $grid-gutter-width/-2;
   }
 }
