improved styling of twitter block reference

--- a/source/sass/modules/tweets/_tweets.scss
+++ b/source/sass/modules/tweets/_tweets.scss
@@ -1,5 +1,5 @@
 .tweets-slideshow {
-  margin-top: $padding-base-vertical*11;
+  margin-top: -$padding-base-vertical;
   position: relative;
 }
 .tweets.slick-slider {
