--- a/source/sass/elements/_navs.scss
+++ b/source/sass/elements/_navs.scss
@@ -241,6 +241,13 @@
       background-color: $brand-primary;
     }
   }
+  .nrw-menu__header {
+    a {
+      font-size: $font-size-small;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+  }
   &__content{
     display: none;
     position: absolute;
@@ -293,6 +300,7 @@
         line-height: 1.3;
         font-size: $font-size-h3;
         font-family: $font-family-sans-serif;
+        text-transform: uppercase;
 
         .sub-title{
           font-weight: bold;
@@ -315,6 +323,7 @@
         -webkit-font-smoothing: antialiased;
       }
     }
+    // Second level menu items
     > .nrw-menu__list{
       list-style: none;
       float: left;
@@ -323,13 +332,27 @@
       width: 75%;
       padding: $padding-base-horizontal $padding-base-horizontal*3.6;
       margin-bottom: $padding-base-horizontal*5;
+      .submenu {
+        padding: $padding-base-vertical 0;
+      }
       ul{
         list-style: none;
       }
       a{
         @include icon-before('\f061');
-        font-size: $font-size-base - 4;
+        font-size: $font-size-base - 1;
+        font-weight: bold;
         text-transform: initial;
+        &:before {
+          font-size: $font-size-small;
+        }
+      }
+      // Third level menu items
+      .nrw-menu__list {
+        padding-left: $grid-gutter-width/2;
+        a {
+          font-size: $font-size-small + 1;
+        }
       }
     }
 
