--- a/templates/menu/menu--main--sidebar.html.twig
+++ b/templates/menu/menu--main--sidebar.html.twig
@@ -14,19 +14,22 @@
  *
  * @ingroup templates
  */
-#}
-{% import _self as menus %}
+ #}
 
+<div class="nrw-menu-sidebar-sub">
+
+{% import _self as menus %}
 {#
   We call a macro which calls itself to render the full tree.
   @see http://twig.sensiolabs.org/doc/tags/macro.html
-#}
+  #}
 {{ menus.menu_links(items, attributes, 0) }}
 
 {% macro menu_links(items, attributes, menu_level) %}
-  {% import _self as menus %}
-  {% if items %}
-      <ul>
+{% import _self as menus %}
+
+{% if items %}
+  <ul class="nrw-menu-sidebar-sub__menu-list nrw-menu-sidebar-sub__menu-list--level-{{ menu_level + 4 }}">
     {% for item in items %}
       {%
         set item_classes = [
@@ -34,13 +37,28 @@
           item.in_active_trail ? 'active',
         ]
       %}
-        <li{{ item.attributes.addClass(item_classes) }}>
+
+      <li{{ item.attributes.addClass(item_classes) }}>
+        {# Set icons according to menu level depth #}
+        {% if menu_level == 0 %}
+          {% if item.below is not empty %}
+            <i class="fa fa-angle-up" aria-hidden="true"></i>
+          {% else %}
+            <i class="fa fa-angle-down" aria-hidden="true"></i>
+          {% endif %}
+        {% else %}
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        {% endif %}
+
         {{ link(item.title, item.url) }}
-      {% if item.below %}
-        {{ menus.menu_links(item.below, attributes.removeClass('nav', 'navbar-nav'), menu_level + 1) }}
-      {% endif %}
+
+        {# Submenus of menu item #}
+        {% if item.below %}
+          {{ menus.menu_links(item.below, attributes.removeClass('nav', 'navbar-nav'), menu_level + 1) }}
+        {% endif %}
       </li>
     {% endfor %}
-    </ul>
-  {% endif %}
+  </ul>
+{% endif %}
 {% endmacro %}
+</div>
