--- a/source/sass/elements/_navs.scss
+++ b/source/sass/elements/_navs.scss
@@ -160,8 +160,17 @@
     font-size: $font-size-small - 2;
     font-weight: bold;
     text-transform: uppercase;
+    position: relative;
     &:hover{
       text-decoration: none;
+    }
+    &.is-active {
+      &:after{
+        @include triangle-up($size: 10px);
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+      }
     }
     div{
       display: flex;
@@ -231,11 +240,10 @@
     }
     &.is-open{
       background-color: $brand-primary;
-      &:before{
-        @include triangle-up($size: 10px);
-        top: -10px;
-        left: 66px;
+      .nrw-menu__header a {
+        text-decoration: underline;
       }
+
     }
     &:hover{
       background-color: $brand-primary;
@@ -301,7 +309,13 @@
         font-size: $font-size-h3;
         font-family: $font-family-sans-serif;
         text-transform: uppercase;
-
+        &:hover,
+        &:active {
+          &,
+          .sub-title {
+            text-decoration: underline;
+          }
+        }
         .sub-title{
           font-weight: bold;
           display: inline-block;
