--- a/source/sass/components/_content.scss
+++ b/source/sass/components/_content.scss
@@ -156,3 +156,17 @@ article,.paragraph{
     }
   }
 }
+
+.no-padding {
+  padding: 0;
+}
+
+.no-vertical-padding {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.no-horizontal-padding {
+  padding-left: 0;
+  padding-right: 0;
+}
