Small changes and cleanup

--- a/source/sass/modules/media_image/_media-image.scss
+++ b/source/sass/modules/media_image/_media-image.scss
@@ -52,8 +52,8 @@
   }
 }
 
-// For view mode preview
-.media--preview {
+// For view mode search
+.media--search {
   .image__image {
     position: relative;
   }
