--- a/templates/system/page.html.twig
+++ b/templates/system/page.html.twig
@@ -61,14 +61,36 @@
 {% set container = theme.settings.fluid_container ? 'container-fluid' : 'container' %}
 {# Social media settings #}
 {% if social_media_settings %}
-  <div id="social-media-settings" class="modal fade" role="dialog">
+  <div id="social-media-settings" class="social-media-settings modal fade" role="dialog">
     <div class="modal-dialog">
+      <div class="modal-header">
+        <button type="button" class="modal-close pull-right modal-button btn btn-default" data-dismiss="modal">
+          <span>{{ 'Schließen'|trans }}</span>
+          <i class="fa fa-times"></i>
+        </button>
+        <h2 class="modal-title">{{ 'Social Media Settings'|trans }}</h2>
+      </div>
       <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">{{ 'Social Media Settings'|trans }}</h4>
-        </div>
         <div class="modal-body">
-          <ul>
+          <div class="social-media-settings__text">
+            <div>
+              {% trans %}
+                <p>Wenn Sie diese Felder durch einen Klick aktivieren, werden Informationen an
+                <a href="http://www.facebook.com" target="_blank">Facebook</a>,
+                <a href="https://twitter.com/" target="_blank">Twitter</a>,
+                <a href="https://www.youtube.com/" target="_blank">Youtube</a>,
+                <a href="https://plus.google.com/" target="_blank">Google</a>,
+                <a href="https://de.pinterest.com/" target="_blank">Pinterest</a>,
+                <a href="https://www.flickr.com/" target="_blank">Flickr</a> oder
+                <a href="https://vimeo.com/" target="_blank">Vimeo</a>
+                übertragen und unter Umständen auch dort gespeichert.</p>
+                <p>Bitte beachten Sie unsere Hinweise und Informationen zum
+                <a href="/datenschutzhinweise" target="_blank"> Datenschutz </a> und zur <a href="/netiquette" target="_blank">Netiquette</a>, bevor Sie einzelne Soziale Medien aktivieren.</p>
+                <p>Datenfeeds von sozialen Netzwerken dauerhaft aktivieren und Datenübertragung zustimmen:</p>
+              {% endtrans %}
+            </div>
+          </div>
+          <ul class="social-media-settings__settings-list">
             <li><label><input class="js-social-media-source-all" type="checkbox" value="all">{{ 'Alle'|trans }}</label></li>
           {% for key, name in social_media_sources %}
             <li><label><input class="js-social-media-source" type="checkbox" value="{{ key }}">{{ name }}</label></li>
@@ -76,8 +98,14 @@
           </ul>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">{{ 'Cancel'|trans }}</button>
-          <button type="button" class="js-social-media-settings-save btn btn-default" data-dismiss="modal">{{ 'Save'|trans }}</button>
+          <button type="button" class="social-media-settings__cancel modal-button btn btn-default" data-dismiss="modal">
+            <span>{{ 'Abbrechen'|trans }}</span>
+            <i class="fa fa-times"></i>
+          </button>
+          <button type="button" class="js-social-media-settings-save modal-button social-media-settings__save btn btn-default" data-dismiss="modal">
+            <span>{{ 'Speichern'|trans }}</span>
+            <i class="fa fa-paper-plane"></i>
+          </button>
         </div>
       </div>
     </div>
