Fixed SCSS for media person author.

--- a/source/sass/modules/media_person/_media-person.scss
+++ b/source/sass/modules/media_person/_media-person.scss
@@ -21,6 +21,8 @@
 }
 .media-person--author {
   padding: 0;
+  margin-left: 0;
+  margin-right: 0;
   .media-person__image {
     float: none;
     width: 100%;
