Updated styles for new tempaltes

--- a/source/sass/modules/media_gallery/_media-gallery.scss
+++ b/source/sass/modules/media_gallery/_media-gallery.scss
@@ -51,5 +51,8 @@
     color: $brand-primary;
     padding: 0 $padding-xs-horizontal;
   }
+  .gallery__description {
+    color: $color-white;
+  }
 }
 
