add icons to social media reference headers, adjust gray bg on social media settings code - RMNRW-214

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -38,6 +38,8 @@ $nrw-green: #008732;
 $nrw-yellow: #a76600;
 $nrw-red: #8b1a1a;
 $nrw-twitter-blue: #009ee0;
+$facebook-blue: #3b5999;
+$youtube-red: #c9332d;
 
 $background-grey: #c0c0c0;
 
