--- a/source/sass/elements/_media.scss
+++ b/source/sass/elements/_media.scss
@@ -1,12 +1,14 @@
 .js-social-media-code {
-  padding: $grid-gutter-width/2;
-  margin: $grid-gutter-width/2;
-  background: rgba($gray-base,0.5);
-  &,
-  a.js-social-media-settings-open {
-    color: $color-white;
-  }
-  a {
-    font-weight: bold;
+  >div {
+    padding: $grid-gutter-width/2;
+    margin: $grid-gutter-width/2;
+    background: rgba($gray-base,0.5);
+    &,
+    a.js-social-media-settings-open {
+      color: $color-white;
+    }
+    a {
+      font-weight: bold;
+    }
   }
 }
