--- a/source/sass/elements/_form.scss
+++ b/source/sass/elements/_form.scss
@@ -100,6 +100,9 @@ form.webform-submission-form{
       font-size: $font-size-small;
       font-weight: bold;
       @include icon-after($fa-var-paper-plane);
+      &:focus{
+        border: 1px dotted $brand-primary;
+      }
       &:after{
         color: white;
         padding: $grid-gutter-width/4;
@@ -123,6 +126,9 @@ form.webform-submission-form{
     font-size: $font-size-small;
     font-weight: bold;
     padding: $grid-gutter-width/2 - 5;
+  }
+  a{
+    display: inline-block;
   }
   i{
     margin-left: $grid-gutter-width/8;
