add remaining social media colors and some adjustments for responsive - social media settings block-  RMNRW-214

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -40,6 +40,11 @@ $nrw-red: #8b1a1a;
 $nrw-twitter-blue: #009ee0;
 $facebook-blue: #3b5999;
 $youtube-red: #c9332d;
+$google-plus-red: #db4437;
+$pinterest-red: #bd081b;
+$flickr-blue: #0063dc;
+$flickr-pink: #ff0084;
+$vimeo-blue: #00b9e7;
 
 $background-grey: #c0c0c0;
 
