--- a/source/sass/modules/paragraph_map/_paragraph-map.scss
+++ b/source/sass/modules/paragraph_map/_paragraph-map.scss
@@ -4,4 +4,7 @@
     margin-left: $grid-gutter-width/-2;
     margin-right: $grid-gutter-width/-2;
   }
+  &.paragraph {
+    overflow: visible;
+  }
 }
