--- a/source/sass/elements/_media.scss
+++ b/source/sass/elements/_media.scss
@@ -1,5 +1,5 @@
 .js-social-media-code {
-  >div {
+  &__message {
     padding: $grid-gutter-width/2;
     margin: $grid-gutter-width/2;
     background: rgba($gray-base,0.5);
